k8files/aosmicroservicio-grupo1-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: aosmicroservicio-grupo1-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/aosmicroservicio-grupo1-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/aosmicroservicio-grupo1-default: "true"
